// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Border Processors > should process border correctly > border 1`] = `
"// Primitive SCSS Variables
$border-size-primary: 0.25rem;
$size-4: 0.25rem;
$spacing-3: 0.25rem;
$border-primary: #687879;
$gray-medium: #687879;
$gray-500: #687879;

// Generated SCSS Mixins
@mixin position-inside-custom {
  width: 6.25rem;
  height: 6.25rem;
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
}
@mixin position-center-custom {
  width: 6.25rem;
  height: 6.25rem;
  border: $border-size-primary solid $border-primary;
}
@mixin position-outside-custom {
  width: 6.25rem;
  height: 6.25rem;
  outline: $border-size-primary solid $border-primary;
}
"
`;

exports[`Border Processors > should process border correctly > border 2`] = `
"// Primitive SCSS Variables
$border-size-primary: 0.25rem;
$size-4: 0.25rem;
$spacing-3: 0.25rem;
$border-primary: #687879;
$gray-medium: #687879;
$gray-500: #687879;

// Generated SCSS Mixins
@mixin position-inside-custom {
  width: 6.25rem;
  height: 6.25rem;
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
}
@mixin position-center-custom {
  width: 6.25rem;
  height: 6.25rem;
  border: $border-size-primary solid $border-primary;
}
@mixin position-outside-custom {
  width: 6.25rem;
  height: 6.25rem;
  outline: $border-size-primary solid $border-primary;
}
"
`;

exports[`Border Processors > should process border radius correctly > border-radius 1`] = `
"// Primitive SCSS Variables
$corner-radius-primary: 1rem;
$size-null: 0rem;
$colors-primary-brand-teal-teal-800: #00464a;
$size-16: 1rem;
$size-0: 0rem;
$spacing-5: 1rem;
$spacing-0: 0rem;

// Generated SCSS Mixins
@mixin border-radius-variable {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: $corner-radius-primary;
}
@mixin border-radius-topright-variable {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: $size-null $corner-radius-primary $size-null $size-null;
}
@mixin border-radius-bottomright-variable {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: $size-null $size-null $corner-radius-primary;
}
@mixin border-radius-topleft-variable {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: $corner-radius-primary $size-null $size-null;
}
@mixin border-radius-bottomleft-variable {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: $size-null $size-null $size-null $corner-radius-primary;
}
@mixin border-radius-custom {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: 1rem;
}
@mixin border-radius-topright-custom {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: 0 1rem 0 0;
}
@mixin border-radius-bottomright-custom {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: 0 0 1rem;
}
@mixin border-radius-topleft-custom {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: 1rem 0 0;
}
@mixin border-radius-bottomleft-custom {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: 0 0 0 1rem;
}
"
`;

exports[`Border Processors > should process border radius correctly > border-radius 2`] = `
"// Primitive SCSS Variables
$corner-radius-primary: 1rem;
$size-null: 0rem;
$colors-primary-brand-teal-teal-800: #00464a;
$size-16: 1rem;
$size-0: 0rem;
$spacing-5: 1rem;
$spacing-0: 0rem;

// Generated SCSS Mixins
@mixin border-radius-variable {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: $corner-radius-primary;
}
@mixin border-radius-topright-variable {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: $size-null $corner-radius-primary $size-null $size-null;
}
@mixin border-radius-bottomright-variable {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: $size-null $size-null $corner-radius-primary;
}
@mixin border-radius-topleft-variable {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: $corner-radius-primary $size-null $size-null;
}
@mixin border-radius-bottomleft-variable {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: $size-null $size-null $size-null $corner-radius-primary;
}
@mixin border-radius-custom {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: 1rem;
}
@mixin border-radius-topright-custom {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: 0 1rem 0 0;
}
@mixin border-radius-bottomright-custom {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: 0 0 1rem;
}
@mixin border-radius-topleft-custom {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: 1rem 0 0;
}
@mixin border-radius-bottomleft-custom {
  background: $colors-primary-brand-teal-teal-800;
  width: 6.25rem;
  height: 6.25rem;
  border-radius: 0 0 0 1rem;
}
"
`;

exports[`Border Processors > should process border shape correctly > border-shape 1`] = `
"// Primitive SCSS Variables
$border-size-primary: 0.25rem;
$size-4: 0.25rem;
$spacing-3: 0.25rem;
$border-primary: #687879;
$gray-medium: #687879;
$gray-500: #687879;

// Generated SCSS Mixins
@mixin shape-rectangle {
  width: 6.25rem;
  height: 6.25rem;
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
}
@mixin shape-rounded-rectangle {
  width: 6.25rem;
  height: 6.25rem;
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
  border-radius: 1.25rem;
}
@mixin shape-ellipse {
  width: 6.25rem;
  height: 6.25rem;
  border: $border-size-primary solid $border-primary;
  box-shadow: inset 0 0.25rem 0 0 $border-primary, inset -0.25rem 0 0 0 $border-primary, inset 0 -0.25rem 0 0 $border-primary, inset 0.25rem 0 0 0 $border-primary;
  border-radius: 50%;
}
@mixin shape-line-curved {
  width: 6.3125rem;
  height: 6.3125rem;
  border: $border-size-primary solid $border-primary;
}
"
`;

exports[`Border Processors > should process border shape correctly > border-shape 2`] = `
"// Primitive SCSS Variables
$border-size-primary: 0.25rem;
$size-4: 0.25rem;
$spacing-3: 0.25rem;
$border-primary: #687879;
$gray-medium: #687879;
$gray-500: #687879;

// Generated SCSS Mixins
@mixin shape-rectangle {
  width: 6.25rem;
  height: 6.25rem;
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
}
@mixin shape-rounded-rectangle {
  width: 6.25rem;
  height: 6.25rem;
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
  border-radius: 1.25rem;
}
@mixin shape-ellipse {
  width: 6.25rem;
  height: 6.25rem;
  border: $border-size-primary solid $border-primary;
  box-shadow: inset 0 0.25rem 0 0 $border-primary, inset -0.25rem 0 0 0 $border-primary, inset 0 -0.25rem 0 0 $border-primary, inset 0.25rem 0 0 0 $border-primary;
  border-radius: 50%;
}
@mixin shape-line-curved {
  width: 6.3125rem;
  height: 6.3125rem;
  border: $border-size-primary solid $border-primary;
}
"
`;

exports[`Border Processors > should process border sides correctly > border-sides 1`] = `
"// Primitive SCSS Variables
$border-size-primary: 0.25rem;
$size-null: 0rem;
$size-4: 0.25rem;
$size-0: 0rem;
$spacing-3: 0.25rem;
$spacing-0: 0rem;
$border-primary: #687879;
$gray-medium: #687879;
$gray-500: #687879;
$size-16: 1rem;
$spacing-5: 1rem;

// Generated SCSS Mixins
@mixin border-center-solid-custom-topleft {
  width: 6.25rem;
  height: 6.25rem;
  border-top: 0.125rem solid #869597;
  border-left: 0.125rem solid #869597;
}
@mixin border-center-solid-custom-top {
  width: 6.25rem;
  height: 6.25rem;
  border: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-topleft {
  width: 6.25rem;
  height: 6.25rem;
  border-top: $border-size-primary solid $border-primary;
  border-left: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-variable-top {
  width: 6.25rem;
  height: 6.25rem;
  border: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-left {
  width: 6.25rem;
  height: 6.25rem;
  border-right: 0.5rem solid #869597;
  border-left: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-left {
  width: 6.25rem;
  height: 6.25rem;
  border-right: $size-16 solid $border-primary;
  border-left: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-right {
  width: 6.25rem;
  height: 6.25rem;
  border-right: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-right {
  width: 6.25rem;
  height: 6.25rem;
  border-right: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-bottom {
  width: 6.25rem;
  height: 6.25rem;
  border-bottom: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-bottom {
  width: 6.25rem;
  height: 6.25rem;
  border-bottom: $border-size-primary solid $border-primary;
}
"
`;

exports[`Border Processors > should process border sides correctly > border-sides 2`] = `
"// Primitive SCSS Variables
$border-size-primary: 0.25rem;
$size-null: 0rem;
$size-4: 0.25rem;
$size-0: 0rem;
$spacing-3: 0.25rem;
$spacing-0: 0rem;
$border-primary: #687879;
$gray-medium: #687879;
$gray-500: #687879;
$size-16: 1rem;
$spacing-5: 1rem;

// Generated SCSS Mixins
@mixin border-center-solid-custom-topleft {
  width: 6.25rem;
  height: 6.25rem;
  border-top: 0.125rem solid #869597;
  border-left: 0.125rem solid #869597;
}
@mixin border-center-solid-custom-top {
  width: 6.25rem;
  height: 6.25rem;
  border: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-topleft {
  width: 6.25rem;
  height: 6.25rem;
  border-top: $border-size-primary solid $border-primary;
  border-left: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-variable-top {
  width: 6.25rem;
  height: 6.25rem;
  border: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-left {
  width: 6.25rem;
  height: 6.25rem;
  border-right: 0.5rem solid #869597;
  border-left: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-left {
  width: 6.25rem;
  height: 6.25rem;
  border-right: $size-16 solid $border-primary;
  border-left: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-right {
  width: 6.25rem;
  height: 6.25rem;
  border-right: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-right {
  width: 6.25rem;
  height: 6.25rem;
  border-right: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-bottom {
  width: 6.25rem;
  height: 6.25rem;
  border-bottom: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-bottom {
  width: 6.25rem;
  height: 6.25rem;
  border-bottom: $border-size-primary solid $border-primary;
}
"
`;
